# JustInvest

./: CHANGELOG.md  README.md  pyproject.toml
justinvest/: __init__.py  portfolio.py  rulesets.py
tests/: test_justinvest.py
