[tool.poetry]
name = "justinvest"
version = "0.1.0"
description = "An end-to-end asset allocation package"
authors = ["Ian Yu <ian.yu@arc.com.co>"]
license = "GPL-3.0-or-later"
readme = README.md


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"